tests/reference/asr-protected_01-1f0c640.stderr
semantic error: Variable temp_c is PROTECTED and cannot appear in LHS of assignment
  --> tests/errors/protected_01.f90:19:3
   |
19 |   temp_c = 10
   |   ^^^^^^ 
